# Vulkan-RayTracer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
core/scritps/: test.h
include/: app.h  config.h  settings.h
include/Converters/: assimpConverter.h
include/Input/: inputManager.h  keyMapping.h  keyboardInput.h  mouseInput.h
include/MathFunctions/: FastFourierTransform.h  stb_perlin.h
include/Memory/: MemoryPool.h
include/MultithreatedSystems/: Console.h  TaskManager.h  miniatureTask.h  mutexManager.h
include/MultithreatedSystems/SimdInstructions/: simdRandom.h
include/Player/: camera.h
include/Scene/: Transform.h  scene.h  sceneObject.h  sceneObjectFlagBits.h
include/Scene/ECS/: component.h  ecs.h  entity.h  system.h
include/Scene/ECS/components/: componentFabric.h  componentType.h  components.h  meshComponent.h  particleComponent.h  scriptComponent.h  textureComponent.h  transformComponent.h
include/Scene/ECS/scripts/: scriptCompiler.h  scriptInterface.h  scriptLoader.h  scriptManager.h
include/Scene/Objects/: Prefab.h  PrefabManager.h  PrefabResources.h
include/Scene/Objects/Lights/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
include/UI/: UIInput.h  UIManager.h  UIManagers.h
include/UI/Font/: FontManager.h
include/UI/UIStructures/: UIButton.h  UICheckBox.h  UICursor.h  UIElement.h  UIElements.h  UIImage.h  UIListBox.h  UIProgressBar.h  UISlider.h  UIText.h  UITooolTip.h
include/View/: RenderingFlags.h  egnine.h
include/View/Interface/: interface.h
include/View/Interface/Commands/: command.h  commandHistory.h  filesystemCommand.h  sceneCommand.h
include/View/Interface/ImGuiRenderer/: ComponentsFunctions.h  EditorCommands.h  PrefabFunctions.h  filesOperationsFunctions.h  sceneObjectsFunctions.h
include/View/Interface/PrefabWindow/: PrefabRenderer.h  PrefabWindow.h
include/View/Interface/Thumbs/: iconsThumbs.h  meshesThumbs.h  texturesThumbs.h  thumbRenderer.h  thumbs.h  thumbsManager.h
include/View/RenderStructs/: frustum.h  projection.h
include/View/vkImage/: cubemap.h  cubemapConverter.h  image.h  texture.h  texture3D.h  textureStorage.h  textureTypes.h
include/View/vkInit/: attachment.h  commands.h  descrpitors.h  device.h  framebuffer.h  instance.h  logging.h  swapchain.h  synchronizer.h
include/View/vkInit/vkAccelerationStructures/: AccelerationStructure.h  GPUAdress.h
include/View/vkInit/vkExtensionsFunctions/: BufferAdress.h
include/View/vkInit/vkPipeline/: meshPipelineBuilder.h  pipelineBuilder.h  pipelineCache.h  shaders.h
include/View/vkMesh/: mesh.h  meshLoader.h  meshTypes.h  meshesManager.h  vertexFormat.h  vertexMenagerie.h
include/View/vkParticle/: Particle.h  ParticleEmitter.h  ParticleGenerator.h  ParticleManager.h
include/View/vkPostProcess/: Fog.h
include/View/vkResources/: resources.h
include/View/vkUtil/: descriptorsBuffers.h  frame.h  queues.h  renderpass.h
include/View/vkVertexData/: aabb.h  bvh.h  triangle.h  vertex.h  vertexMenagerie.h
include/fileOperations/: files.h  filesFinding.h  filesTypes.h  fontLoader.h  prefabOperations.h  resources.h  serializations.h
resources/shaders/: DeferedPixelShader.frag  FragmentShader.frag  ParticleFragmentShader.frag  RayTracer.comp  RayTracerComp.spv  RayTracerTest.comp  UIFontFragmentShader.frag  UIFontVertexShader.vert  UIFontfrag.spv  UIFontvert.spv  UIFragmentShader.frag  UIVertexShader.vert  UIfrag.spv  UIvert.spv  VertexShader.vert  compiler.bat  fogPostprocess.frag  fogPostprocessFrag.spv  fogVolumetric.comp  fogVolumetricCompute.spv  frag.spv  particleFrag.spv  particleMesh.spv  particleMeshShader.mesh  particleTask.spv  particleTask.task  postprocess.frag  postprocess.vert  postprocessFrag.spv  postprocessVert.spv  sceneRenderingWithLithghtsUNLIT.vert  sceneRenderingWithoutLithghts.vert  skyBoxVert.vert  vert.spv  water.frag  water.mesh  water.task  waterFrag.spv  waterMesh.spv  waterTask.spv
resources/shaders/miniatureRenderer/: FragmentShader.frag  VertexShader.vert  compiler.bat  frag.spv  vert.spv
src/: app.cpp  main.cpp
src/Converters/: assimpConverter.cpp
src/Input/: inputManager.cpp  keyMapping.cpp
src/MathFunctions/: FastFourierTransform.cpp  stb_perlin.cpp
src/Memory/: MemoryPool.cpp
src/MultithreatedSystems/: Console.cpp  ThumbnailTask.cpp  mutexManager.cpp
src/MultithreatedSystems/SimdInstructions/: simdRandom.cpp
src/Player/: camera.cpp
src/Scene/: scene.cpp  sceneObject.cpp  sceneObjectFlagBits.cpp
src/Scene/ECS/: component.cpp  ecs.cpp  entity.cpp  system.cpp
src/Scene/ECS/components/: componentFabric.cpp  meshComponent.cpp  particleComponent.cpp  scriptComponent.cpp  textureComponent.cpp  transformComponent.cpp
src/Scene/ECS/scripts/: Script.cpp  scriptCompiler.cpp  scriptInterface.cpp  scriptLoader.cpp  scriptManager.cpp
src/Scene/Objects/: Prefab.cpp  PrefabManager.cpp  PrefabResources.cpp
src/Scene/Objects/Lights/: DirectionalLight.cpp  (+3 more)
src/UI/Font/: FontManager.cpp
src/UI/UIStructures/: UIButton.cpp  UIText.cpp
src/View/: engine.cpp
src/View/Interface/: interface.cpp
src/View/RenderStructs/: projection.cpp
src/View/vkImage/: bitmap.cpp  cubemap.cpp  cubemapConverter.cpp  image.cpp  texture.cpp  texture3D.cpp  textureStorage.cpp  textureTypes.cpp
src/View/vkInit/: attachment.cpp  commands.cpp  descriptors.cpp  device.cpp  framebuffer.cpp  instance.cpp  logging.cpp  swapchain.cpp  synchronizer.cpp
src/View/vkMesh/: mesh.cpp  meshLoader.cpp  meshManager.cpp  meshTypes.cpp  vertexFormat.cpp  vertexMenagerie.cpp
src/View/vkParticle/: DynamicParticleManager.cpp  Particle.cpp  ParticleEmitter.cpp  ParticleGenerator.cpp  ParticleManager.cpp  StaticParticleManager.cpp
src/View/vkPostProcess/: Fog.cpp
src/View/vkResources/: resources.cpp
src/View/vkUtil/: descriptorsBuffers.cpp  frame.cpp  memory.cpp  queues.cpp  renderpass.cpp  singleTimeCommands.cpp
src/View/vkVertexData/: aabb.cpp  bvh.cpp  triangle.cpp  vertex.cpp  vertexMenagerie.cpp
src/fileOperations/: files.cpp  filesFinding.cpp  filesTypes.cpp  fontLoader.cpp  resources.cpp  serializations.cpp
(+32 files in other folders)
